--- a/0x00-projects/02-password_generator/index.css
+++ b/0x00-projects/02-password_generator/index.css
@@ -5,11 +5,6 @@ body {
     margin-left: 35px;
     margin-right: 35px;
     margin-top: 45px;
-   /* text-align: center*/
-}
-
-.container {
-    
 }
 
 h1 {
@@ -22,7 +17,7 @@ h1 {
 }
 
 .sub-info {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: 400;
     font-size: 20px;
     line-height: 28px;
